# dlog

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md
include/: dlog.hpp  threadpool.hpp
src/: example.cpp
